# ics-sbom-libs

./: .gitignore  README.md  REUSE.toml  poetry.toml  pyproject.toml
.github/workflows/: build.yml
.reuse/: dep5
ics_sbom_libs/: __init__.py
ics_sbom_libs/common/: __init__.py  console_output.py  dbproperties.py  logging_setup.py  ratelimiter.py  vulnerability.py
ics_sbom_libs/common/tests/: test_dbproperties.py  test_logging_setup.py
ics_sbom_libs/cve_fetch/: __init__.py  cve_schema.sql  vulnerabilitydatabase.py
ics_sbom_libs/cve_match/: __init__.py  cpe_match_results.py  cvematcher.py  matchresult.py
ics_sbom_libs/cve_match/package_matching/: __init__.py  base.py  buildversion.py  versionfactory.py
ics_sbom_libs/cve_match/package_matching/handlers/: __init__.py  default.py  linux_kernel.py  openssh.py  openssl.py
ics_sbom_libs/sbom_import/: FilterSpec.md  __init__.py  filter_schema.json  parse_anything.py
ics_sbom_libs/sbom_import/spdx_json/: __init__.py  parse.py
ics_sbom_libs/sbom_import/spdx_tag_value/: __init__.py  filter_lexers.py  parse.py  progress_lexer.py
