[tool.poetry]
name = "ics_sbom_libs"
version = "1.1.2"
description = "ICS SBoM libs is a collection of tools developed by Integrated Computing Solutions (ICS) for handling Software Bill of Materials (SBoM) documentaion."
### Poetry apparently doesn't support multiline descriptions.
#"""
#iscbom is a collection of tools developed by Integrated Computing Solutions (ICS) for handling
#Software Bill of Materials (SBoM) documentaion.
#
#This package contains:
#    * ics_sbom_libs -- a library of python modules used for working with SBoMs.
#"""
authors = ["Michael Dingwall <mdingwall@ics.com>",
    "Chris Rizzitello <crizzitello@ics.com>",
    "Sergey Missan <smissan@ics.com>",
    "Qin Zhang <qzhang@ics.com>",
    "Gerardo Stola <gstola@ics.com>"]
readme = "README.md"

# adding the sbom libraries.
packages = [
    { include = "ics_sbom_libs" }
]

[tool.poetry.dependencies]
python = "^3.11"
schema = "*"
xmlschema = "*"
rich = "*"
rich-argparse = "*"

lib4sbom = "*"

pyodbc = "*"
psycopg2-binary = "*"

aiohttp = "*"

cpeparser = "*"

# SPDX importer/exporter
spdx-tools = "*"
tqdm = "*"
requests = "*"
datetime = "*"

# CycloneDX
cyclonedx-python-lib = { version = ">= 7.3.0", extras = ["validation"] }

[tool.poetry.dev-dependencies]
# Testing framework
pytest = "*"
pytest-cov = "*"

# Create standalone executables
pyinstaller = "*"

# Code formatting
black = "*"

# Python linting tool
flake8 = "*"
flake8-bugbear = "*"
flake8-pyproject = "*"

[tool.black]
line-length = 120
preview = true
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "6.0.2"
testpaths = ["tests"]
python_files = ['*.py']
python_functions = ['test_*']
addopts = ['-vvv'] #, '--cov-report html:reports/coverage']  #, '--html=reports/tests.html', '--self-contained-html']

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
